--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -53,10 +53,9 @@
         mode: '0644'
 
     - name: Run docker compose with timeout
-      shell: /usr/local/bin/docker-compose up -d
+      shell: timeout 300 /usr/local/bin/docker-compose up -d  # Use shell-level timeout command
       args:
         chdir: /app
-      timeout: 300  # 5-minute timeout to prevent indefinite hangs
       register: docker_compose_output
 
     - name: Debug docker compose output
