--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -48,4 +48,6 @@
         dest: "{{ COMPOSE_DIR }}/docker-compose.yml"
 
     - name: Start containers
-      command: "cd {{ COMPOSE_DIR }} && /usr/local/bin/docker-compose up -d"
+      docker_compose:
+        project_src: "{{ COMPOSE_DIR }}"
+        state: present
