--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -24,8 +24,18 @@
     - name: Install Docker Compose
       get_url:
         url: "https://github.com/docker/compose/releases/download/{{ DOCKER_COMPOSE_VERSION }}/docker-compose-linux-x86_64"
-        dest: /usr/local/bin/docker-compose
+        dest: "/usr/local/bin/docker-compose"
         mode: '0755'
+
+    - name: Install Python pip
+      yum:
+        name: python-pip
+        state: present
+
+    - name: Install Docker SDK for Python
+      pip:
+        name: docker
+        state: present
 
     - name: Start Docker service
       service:
