Docker compose fix

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -36,6 +36,7 @@
       pip:
         name: docker
         state: present
+        extra_args: "--ignore-installed"  # Forces install, overriding distutils packages
 
     - name: Start Docker service
       service:
