--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -11,34 +11,30 @@
       yum:
         update_cache: yes
 
-    - name: Install Docker
+    - name: Install required packages
       yum:
-        name: docker
+        name:
+          - docker
+          - curl
+          - python-pip
         state: present
 
-    - name: Install curl for Docker Compose
-      yum:
-        name: curl
-        state: present
-
-    - name: Install Docker Compose
+    - name: Install Docker Compose binary
       get_url:
         url: "https://github.com/docker/compose/releases/download/{{ DOCKER_COMPOSE_VERSION }}/docker-compose-linux-x86_64"
         dest: "/usr/local/bin/docker-compose"
         mode: '0755'
+        force: yes
 
-    - name: Install Python pip
-      yum:
-        name: python-pip
-        state: present
-
-    - name: Install Docker SDK for Python
+    - name: Install Python packages for Docker
       pip:
-        name: docker
+        name:
+          - docker
+          - docker-compose
         state: present
-        extra_args: "--ignore-installed"  # Forces install, overriding distutils packages
+        extra_args: "--ignore-installed"
 
-    - name: Start Docker service
+    - name: Start and enable Docker service
       service:
         name: docker
         state: started
@@ -47,18 +43,27 @@
     - name: Log into Docker Hub
       command: docker login -u {{ docker_username }} -p {{ docker_password }}
       no_log: true
+      changed_when: false
 
     - name: Create app directory
       file:
         path: "{{ COMPOSE_DIR }}"
         state: directory
+        mode: '0755'
 
     - name: Copy docker-compose.yml
       copy:
         src: "{{ playbook_dir }}/../docker-compose.yml"
         dest: "{{ COMPOSE_DIR }}/docker-compose.yml"
+        mode: '0644'
 
-    - name: Start containers
-      docker_compose:
+    - name: Deploy with Docker Compose
+      community.docker.docker_compose:
         project_src: "{{ COMPOSE_DIR }}"
         state: present
+      register: compose_result
+
+    - name: Display Docker Compose deployment status
+      debug:
+        var: compose_result
+        verbosity: 1
